# task1

./: df_android.pkl  hello-dagster.py  pyproject.toml  test-dagster.py  test.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
pipeline/: impl.py  pipeline.py
tmp0nl5becm/history/: runs.db
tmp0nl5becm/schedules/: schedules.db
tmp2sdta7jl/history/: runs.db
tmp2sdta7jl/schedules/: schedules.db
tmp2sdta7jl/storage/: model  train_test
tmp2tde8fcz/history/: runs.db
tmp2tde8fcz/schedules/: schedules.db
tmp2tde8fcz/storage/: df_usage
tmp3i_y5cdq/history/: runs.db
tmp3i_y5cdq/schedules/: schedules.db
tmp8zj6k25f/history/: runs.db
tmp8zj6k25f/schedules/: schedules.db
tmp9fr2r15x/history/: runs.db
tmp9fr2r15x/schedules/: schedules.db
tmp9fr2r15x/storage/: model
tmp9z7ciu1o/history/: runs.db
tmp9z7ciu1o/schedules/: schedules.db
tmp9z7ciu1o/storage/: hackernews_top_stories  hackernews_top_story_ids
tmp_4opc36v/history/: runs.db
tmp_4opc36v/schedules/: schedules.db
tmp_4opc36v/storage/: df_result  eval  model
tmpc16aricv/history/: runs.db
tmpc16aricv/schedules/: schedules.db
tmpc16aricv/storage/: df_name  df_result
tmpcbpbfjbl/history/: runs.db
tmpcbpbfjbl/schedules/: schedules.db
tmpcbpbfjbl/storage/: df_result
tmpfbmejlgg/history/: runs.db
tmpfbmejlgg/schedules/: schedules.db
tmpfbmejlgg/storage/: df_device
tmpg9avetl0/history/: runs.db
tmpg9avetl0/schedules/: schedules.db
tmpkpq0icgd/history/: runs.db
tmpkpq0icgd/schedules/: schedules.db
(+50 files in other folders)
