[tool.poetry]
name = "task1"
version = "0.1.0"
description = ""
authors = ["Дарья Соколова <anda0311@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
prefect = "^2.8.3"
six = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
